--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -169,6 +169,7 @@
                         android:layout_height="wrap_content"
                         android:text="0"
                         android:textSize="40dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/textView14"
                         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
@@ -220,21 +221,18 @@
                         android:id="@+id/className"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="4dp"
-                        android:layout_marginTop="16dp"
                         android:text="Class Name"
-                        app:layout_constraintStart_toEndOf="@+id/subjectName"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintStart_toStartOf="@+id/subjectName"
+                        app:layout_constraintTop_toBottomOf="@+id/subjectName" />
 
                     <TextView
                         android:id="@+id/date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="1dp"
                         android:text="12/03/2003"
                         android:textColor="#b2b2b2"
-                        app:layout_constraintStart_toStartOf="@+id/subjectName"
-                        app:layout_constraintTop_toBottomOf="@+id/subjectName" />
+                        app:layout_constraintStart_toStartOf="@+id/className"
+                        app:layout_constraintTop_toTopOf="@+id/guideline10" />
 
                     <ProgressBar
                         android:id="@+id/progressBarPresent"
@@ -320,11 +318,12 @@
                     android:id="@+id/area"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="24dp"
                     android:gravity="center_vertical"
                     android:text="Select Assembly Point"
+                    android:textAlignment="center"
                     android:textColor="@color/off_white"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -332,6 +331,7 @@
                     android:id="@+id/imageView6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
