--- a/app/src/main/res/layout/activity_marshall_evacuation.xml
+++ b/app/src/main/res/layout/activity_marshall_evacuation.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".activity.fire_marshall.MarshallEvacuationActivity">
 
+
+    <ImageView
+        android:id="@+id/back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:src="@drawable/arrow_back_grey"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView4" />
+
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
