--- a/app/src/main/res/layout/activity_student_evacuation.xml
+++ b/app/src/main/res/layout/activity_student_evacuation.xml
@@ -260,9 +260,9 @@
             android:layout_height="wrap_content"
             android:padding="4dp"
             android:text="Current Class"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/view2"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -283,6 +283,7 @@
             android:layout_height="wrap_content"
             android:padding="4dp"
             android:text="All School"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
